--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 class="title">Penalty</h1>
         <table style="width:100%;">
             <tr>
-                <th class="th">NCame</th>
+                <th class="th">Name</th>
                 <th class="th">Name</th>
                 <th class="th">Name</th>
                 <th class="th">Name</th>
