--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
     <style>
+        body{
+            font-family: 'Nanum Myeongjo', serif;
+            font-weight: 1000;
+            background-image:url("./img/jinyun-xBuu23uxarU-unsplash.jpg");
+            background-position: left top;
+            background-size: 100% 100%;
+            background-repeat: none;
+
+        }
         .container{
             display:flex;
             flex-direction: column;
@@ -19,27 +29,39 @@
             font-weight:600;
             margin-bottom:200px;
         }
-        .th{
-            padding: 10px;
-            border-bottom: 1px solid #444444;
-            font-size:1.1vw;
-            margin:10px;
-            text-align:center; 
-        }
-        .td{
-            padding: 10px;
-            border-top: 1px solid #444444;
-            font-size:1.1vw;
-            margin:10px;
-            text-align:center;
-        }
+        
         .sexygrid{
             display:grid;
-            grid-template-columns: repeat(auto-fill,100px);
+            grid-template-columns: repeat(auto-fill,120px);
             grid-gap:25px;
             width:100%;
         }
+        .sexyone{
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            height:120px;
+            flex-direction: column;
+            background-image:url("./img/Business_Finance_Money_1-copy-11.jpg");
+            background-position: center center;
+            background-size: 100% 100%;
+            border-radius: 6px;
+            border: 2px solid black;
+
+        }
+        .name{
+            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+            font-size:18px;
+            color:rgb(255, 255, 255);
+        }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
+    <script
+src="https://kit.fontawesome.com/bb830b2dcb.js"
+crossorigin="anonymous"
+></script>
 </head>
 <body>
     <div class= "container">
