--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
         body{
             font-family: 'Nanum Myeongjo', serif;
             font-weight: 1000;
-            background-image:url("./img/jinyun-xBuu23uxarU-unsplash.jpg");
-            background-position: left top;
-            background-size: 100% 100%;
-            background-repeat: none;
+            
 
         }
         .container{
@@ -32,7 +29,7 @@
         
         .sexygrid{
             display:grid;
-            grid-template-columns: repeat(auto-fill,120px);
+            grid-template-columns: repeat(auto-fill,10vw);
             grid-gap:25px;
             width:100%;
         }
@@ -40,7 +37,7 @@
             display:flex;
             justify-content: center;
             align-items: center;
-            height:120px;
+            height:10vw;
             flex-direction: column;
             background-image:url("./img/Business_Finance_Money_1-copy-11.jpg");
             background-position: center center;
@@ -51,7 +48,7 @@
         }
         .name{
             text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-            font-size:18px;
+            font-size:1.1vw;
             color:rgb(255, 255, 255);
         }
     </style>
