--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         .thsexy{
             background-color: white;
         }
+        #date{
+            font-size:20px;
+            color:white;
+        }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +54,7 @@ crossorigin="anonymous"
     <div class= "container">
         <h1 class="title">"Penalty"</h1>
         <div class="table-responsive" >
-
+        
         <table class="table table-condensed table-bordered  table-striped table-dark" >
             <thead>
                 <tr class="info"></tr>
@@ -59,7 +63,7 @@ crossorigin="anonymous"
                 <tr id ="one"class="active"></tr>
             </tbody>
           </table>
-
+          <span id="date"></span>
         </div>
         <h1 class="title">"Pray List"</h1>
         <div class="prayer" style="display: block;">
