--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ crossorigin="anonymous"
                 <tr id ="one"class="active"></tr>
             </tbody>
           </table>
-          <span id="date"></span>
+          <span id="date" />
         </div>
         <h1 class="title">"Pray List"</h1>
         <div class="prayer" style="display: block;">
